RESOLVED FIXED300712
Reclassify assertion in LineLayout::paint and hitTest
https://bugs.webkit.org/show_bug.cgi?id=300712
Summary Reclassify assertion in LineLayout::paint and hitTest
alan
Reported 2025-10-14 10:15:32 PDT
ssia
Attachments
[fast-cq]Patch (1.56 KB, patch)
2025-10-14 10:16 PDT, alan
no flags
alan
Comment 1 2025-10-14 10:16:38 PDT
Created attachment 477072 [details] [fast-cq]Patch
EWS
Comment 2 2025-10-14 12:34:55 PDT
Committed 301491@main (c75ac584734b): <https://commits.webkit.org/301491@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 477072 [details].
Radar WebKit Bug Importer
Comment 3 2025-10-14 12:35:14 PDT
Note You need to log in before you can comment on or make changes to this bug.