Reclassify assertion in LineLayout::paint and hitTest https://bugs.webkit.org/show_bug.cgi?id=300712

Reviewed by Antti Koivisto.

We can recover from this unexpected state just fine (no security implications).

* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::paint):
(WebCore::LayoutIntegration::LineLayout::hitTest):

Canonical link: https://commits.webkit.org/301491@main